       and displaying table names, so now tables by default have no names.
   - ovs-ofctl:
     * ovs-ofctl now accepts and display table names in place of numbers.  By
       default it always accepts names and in interactive use it displays them;
       use --names or --no-names to override.  See ovs-ofctl(8) for details.
   - ovs-vsctl: New commands "add-bond-iface" and "del-bond-iface".


v2.9.0 - xx xxx xxxx
--------------------
   - NSH implementation now conforms to latest draft (draft-ietf-sfc-nsh-28).
     * Add ttl field.
     * Add a new action dec_nsh_ttl.
     * Enable NSH support in kernel datapath.
   - OVSDB:
     * New high-level documentation in ovsdb(7).
     * New file format documentation for developers in ovsdb(5).
     * Protocol documentation moved from ovsdb-server(1) to ovsdb-server(7).
     * ovsdb-client: New "get-schema-cksum" and "query" commands.
     * ovsdb-client: New "backup" and "restore" commands.
     * ovsdb-client: New --timeout option.
     * ovsdb-tool: New "db-name" and "schema-name" commands.
   - ovs-vsctl and other commands that display data in tables now support a
     --max-column-width option to limit column width.
   - No longer slow-path traffic that sends to a controller.  Applications,
     such as OVN ACL logging, want to send a copy of a packet to a
     controller while leaving the actual packet forwarding in the datapath.
   - OVN:
     * The "requested-chassis" option for a logical switch port now accepts a
       chassis "hostname" in addition to a chassis "name".
     * IPv6
       - Added support to send IPv6 Router Advertisement packets in response to
         the IPv6 Router Solicitation packets from  the VIF ports.
       - Added support to generate Neighbor Solicitation packets using the OVN
         action 'nd_ns' to resolve unknown next hop MAC addresses for the
         IPv6 packets.
     * ovn-ctl: New commands run_nb_ovsdb and run_sb_ovsdb.
   - OpenFlow: